# pwndck

./: CHANGELOG.md  README.md  devtest.py  fixit  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
debian/: changelog  clean  control  copyright  pwndck.1.md  pwndck.manpages  release_check  rules  salsa-ci.yml  watch
debian/tests/: control
debian/upstream/: metadata
pwndck/: __init__.py  __main__.py  db_size.py  flexi_formatter.py  processpw.py  pwndck.py  pwndckcli.py  version.py
test/: .test_pwndck.py.swp  conftest.py  test_db_size.py  test_processpw.py  test_pwndck.py  test_pwndckcli.py
