[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
name = "pwndck"
version = "0.1"
description = "Check for leaked passwords in HaveIBeenPwned."
license = "GPL-2.0-or-later"
authors = [
    "David Steele <dsteele@gmail.com>",
]
readme = "README.md"
homepage = "https://github.com/davesteele/pwndck"
classifiers = [
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Other/Nonlisted Topic",
]
packages = [
    {include = "pwndck"},
]

[tool.poetry.scripts]
pwndck = "pwndck.pwndck:main"

[tool.poetry.dependencies]
requests = { version = ">=2.32.5,<3.0.0" }
argparse-formatter = { version = ">=1.4,<2.0" }

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
